public interface Called {
    public String getName();
    public void setName(String name);
}
