public interface Carrier extends Called{
    public void carry(MovableObject movable, String newPlace);
}
