public interface MovableObject extends Movable, Called, Existing{
}
